# csharp-language-server

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
download-server-project/: version.txt
src/: download_roslyn.rs  download_server.rs  main.rs  notification.rs  path.rs  roslyn.rs  server.rs  server_version.rs
tests/: integration_tests.rs
tests/TestProject/: Hello.cs  Program.cs
