[package]
name = "csharp-language-server"
version = "0.7.0"
edition = "2024"
authors = ["Sofus Addington"]
description = "A tool that simplifies installation and running C# language server"
license = "MIT"
repository = "https://github.com/sofusa/csharp-language-server"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
